添加linux下编译

--- a/code/common/DataBase/CMakeLists.txt
+++ b/code/common/DataBase/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(LIBDATABASE_SRC
 Mysql/MysqlQuery.cpp
 Mysql/MysqlResult.cpp
+Mysql/MysqlResultSet.cpp
 Mysql/ProcedureSqlObject.cpp
 )
 include_directories (
