修改模拟器的网络协议定议文件，用新的proto替换旧的，修改相关的代码；

--- a/code/ClientSimulator/ClientSimulator/ClientSimulator.vcxproj
+++ b/code/ClientSimulator/ClientSimulator/ClientSimulator.vcxproj
@@ -107,7 +107,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="ClientGSProtocol.pb.h" />
+    <ClInclude Include="..\..\Share\Header\Simulator\UI2LogicProtocol.h" />
     <ClInclude Include="ClientSimulator.h" />
     <ClInclude Include="ClientSimulatorDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -115,9 +115,6 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ClientGSProtocol.pb.cc">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="ClientSimulator.cpp" />
     <ClCompile Include="ClientSimulatorDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -129,11 +126,6 @@
     <ResourceCompile Include="ClientSimulator.rc" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\..\Share\Header\ClientGSProtocol.proto">
-      <FileType>Document</FileType>
-      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">protoc -I=../../Share/Header/ --cpp_out=./ ../../Share/Header/ClientGSProtocol.proto</Command>
-      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">ClientGSProtocol.pb.cc;../../share/Header/ClientGSProtocol.pb.h;%(Outputs)</Outputs>
-    </CustomBuild>
     <None Include="res\ClientSimulator.rc2" />
   </ItemGroup>
   <ItemGroup>
