--- a/code/ClientSimulator/ClientSimulator/ClientSimulator.vcxproj.filters
+++ b/code/ClientSimulator/ClientSimulator/ClientSimulator.vcxproj.filters
@@ -30,8 +30,8 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ClientGSProtocol.pb.h">
-      <Filter>Source Files</Filter>
+    <ClInclude Include="..\..\Share\Header\Simulator\UI2LogicProtocol.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -42,9 +42,6 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ClientGSProtocol.pb.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,10 +59,5 @@
     <Image Include="res\ClientSimulator.ico">
       <Filter>Resource Files</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="..\..\Share\Header\ClientGSProtocol.proto">
-      <Filter>Source Files</Filter>
-    </CustomBuild>
   </ItemGroup>
 </Project>
