添加WebServerConnection，以及对应的功能代码

--- a/bin/server/clientsimulator.ini
+++ b/bin/server/clientsimulator.ini
@@ -1,6 +1,8 @@
 [Server]
 ServerIP=127.0.0.1
-ServerPort=12345
+AppServerPort=10000
+WebServerPort=10100
+
 ConnectionCount=1000
 RecvBuffLen=131072
 SendBuffLen=16384
