模拟器添加UI的处理

--- a/code/ClientSimulator/SimulatorLogic/SimulatorLogic.vcxproj
+++ b/code/ClientSimulator/SimulatorLogic/SimulatorLogic.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="ServerConnection\WebServerProtocol.cpp" />
     <ClCompile Include="ServerConnection\Web_Server_Protocol.pb.cc" />
     <ClCompile Include="SimulatorLogic.cpp" />
+    <ClCompile Include="UIMsgProcess.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\..\Share\Header\ClientGSProtocol.proto">
