--- a/code/Server/CenterServerLogic/Makefile.am
+++ b/code/Server/CenterServerLogic/Makefile.am
@@ -20,13 +20,13 @@ libcenterserverlogic_a_SOURCES += SensorDB/SensorDBConn.cpp
 
 
 INCLUDES = -I./
-INCLUDES += -I../../../Share/Header/
-INCLUDES += -I../../../Share/Header/Base/
-INCLUDES += -I../../../Share/Header/Server/
-INCLUDES += -I../../../Share/Header/CenterServer/
-INCLUDES += -I../../../Share/Header/curl/
+INCLUDES += -I../../Share/Header/
+INCLUDES += -I../../Share/Header/Base/
+INCLUDES += -I../../Share/Header/Server/
+INCLUDES += -I../../Share/Header/CenterServer/
+INCLUDES += -I../../Share/Header/curl/
 #LDADD = ../../../Share/llib/libcommon.a
-llibdir=../../../Share/llib/
+llibdir=../../Share/llib/
 
 
 
