--- a/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
+++ b/code/Server/CenterServerLogic/CenterServerLogic.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="Client\Web_Server_Protocol.pb.cc">
       <Filter>Client</Filter>
     </ClCompile>
+    <ClCompile Include="Client\CommonDefine.pb.cc">
+      <Filter>Client</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CenterServerLogic.h">
@@ -82,6 +85,9 @@
     <ClInclude Include="Client\Web_Server_Protocol.pb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Client\CommonDefine.pb.h">
+      <Filter>Client</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Share\Header\Protocol\Sensor_Server_Protocol.proto">
@@ -93,6 +99,9 @@
       <Filter>Client</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\Share\Header\Protocol\Web_Server_Protocol.proto">
+      <Filter>Client</Filter>
+    </CustomBuild>
+    <CustomBuild Include="..\..\Share\Header\Protocol\CommonDefine.proto">
       <Filter>Client</Filter>
     </CustomBuild>
   </ItemGroup>
