--- a/code/common/Makefile.am
+++ b/code/common/Makefile.am
@@ -34,3 +34,4 @@ libcommon_a_LDFLAGS = -static -std=c++0x
 INCLUDES = -I@top_srcdir@/Share/Header/
 INCLUDES += -I../Share/Header/
 INCLUDES += -I../Share/Header/Base/
+INCLUDES += -I../Share/Header/mysql/linux/
