修改历史数据添加平均值传给客户端； 修改windows工程因目录结构改变导致打开头文件失败的问题；

--- a/code/server/center/CenterServer/CenterServer.vcxproj
+++ b/code/server/center/CenterServer/CenterServer.vcxproj
@@ -87,8 +87,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServer.h" />
-    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServerLogic.h" />
+    <ClInclude Include="..\..\..\share\header\CenterServer\ICenterServer.h" />
+    <ClInclude Include="..\..\..\share\header\CenterServer\ICenterServerLogic.h" />
     <ClInclude Include="CenterServer.h" />
     <ClInclude Include="Config\CenterServerConfig.h" />
     <ClInclude Include="Connection\AppConnection.h" />
