--- a/code/server/center/CenterServer/CenterServer.vcxproj.filters
+++ b/code/server/center/CenterServer/CenterServer.vcxproj.filters
@@ -20,12 +20,6 @@
     <ClInclude Include="CenterServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Share\Header\CenterServer\ICenterServerLogic.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Connection\AppConnection.h">
       <Filter>Connection</Filter>
     </ClInclude>
@@ -43,6 +37,12 @@
     </ClInclude>
     <ClInclude Include="Connection\DataConnection.h">
       <Filter>Connection</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\share\header\CenterServer\ICenterServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\share\header\CenterServer\ICenterServerLogic.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
